--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
       // Cek apakah username dan password cocok dengan data yang ada di penyimpanan lokal
       if (checkCredentials(username, password)) {
         showToast('ការចុះឈ្មោះទទួលបានជោគជ័យ!');
-        window.location.href = 'beranda.html'; // Pindah ke halaman beranda setelah login berhasil
+        window.location.href = 'dash.html'; // Pindah ke halaman beranda setelah login berhasil
       } else {
         showToast('ឈ្មោះនឹងពាក្យសម្ងាត់របស់អ្នកមិនត្រឹមត្រូវទេ!');
       }
